# deuce

./: Cargo.toml  deuce.toml
src/: checksum.rs  database.rs  device.rs  logging.rs  main.rs  math.rs  milestones.rs  network.rs  player.rs  rc4.rs  reader.rs  settings.rs  writer.rs
src/csv_logic/: cards.rs  characters.rs  locations.rs  mod.rs  skins.rs
src/packets/: mod.rs  packet.rs
src/packets/client/: factory.rs  login_message.rs  mod.rs
src/packets/server/: clan_stream_message.rs  home_data_message.rs  login_failed_message.rs  login_ok_message.rs  mod.rs  my_alliance_message.rs
