[package]
name = "deuce"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10.0"
postgres = "0.19.10"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.2"
log = "0.4.26"
env_logger = "0.11.6"
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }
config = { version = "0.15.8", features = ["toml"] }
